feat: enhance camera functionality with capture command polling and live preview updates